force-app/main/default/objects/VisitorToken__c/VisitorToken__c.object-meta.xml
<CustomObject>
    <label>VisitorToken</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>VisitorToken Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VisitorToken</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>