force-app/main/default/objects/VisitorToken__c/fields/GeneratedToken__c.field-meta.xml
<CustomField>
    <fullName>GeneratedToken__c</fullName>
    <label>GeneratedToken</label>
    <length>18</length>
    <type>Text</type>
</CustomField>