force-app/main/default/objects/VisitorToken__c/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Visitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VisitorToken</relationshipLabel>
    <relationshipName>VisitorToken</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>